New version of FastWFOMC

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1145,6 +1145,27 @@ efficiency can be reasoned about in a more implementation-independent manner by
 making claims about the maximum degree of the polynomial that characterises any
 given solution.
 
+% \section{TODO: Complete or Remove. Correctness of Smoothing}
+
+% What does it mean for a smoothing algorithm to `do the right thing'?
+
+% \begin{definition}
+%   Let $\Delta$ be a domain. Let $P(\mathbf{c})$ be ground atom, where $P/n$ is a
+%   predicate associated with domains $\Delta_{1}, \dots, \Delta_{n}$. We say
+%   that:
+%   \begin{itemize}
+%     \item $P(\mathbf{c})$ is captured by
+%           $\CR(\Delta' \gets \Delta \setminus \{ d \}) \to n$ if it is captured
+%           by $n$.
+%     \item Let $I \coloneqq \{\, i = 1, \dots, n \mid \Delta_{i} = \Delta \,\}$.
+%           Then $P(\mathbf{c})$ is captured by $\DR(d \in \Delta) \to n$ if
+%           $\{\, P(\mathbf{c})[c_{i} \mapsto d_{i}\text{ for all
+%           }i \in I] \mid d_{i} \in \Delta\text{ for all }i \in I \,\}$ is
+%           captured by $n$.
+%     \item $P(\mathbf{c})$ is captured by\ldots
+%   \end{itemize}
+% \end{definition}
+
 \bibliographystyle{kr}
 \bibliography{paper}
 
